# rust_it_rust_it

./: .gitignore  Cargo.toml
src/: main.rs  resources.rs
src/screens/: gameplay.rs  loading.rs  mod.rs  select.rs
tests/: test.rs
